fixed header on mobile view

--- a/assets/scss/header.scss
+++ b/assets/scss/header.scss
@@ -1,37 +1,57 @@
 @import "catppucin-mocha.scss";
-$header-background-color:  rgba($mocha-blue, 0.25);
 
 .site-header {
-  background-color: $header-background-color;
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  background-color: rgba($mocha-blue, 0.25);
   top: 0;
-  z-index: 1000;
   margin: 0;
   width: 100%;
+  min-height: 5rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: row;
+}
+
+.header-search{
+  display: flex;
+  width: 20%;
+  align-items: left;
+  padding-left: 1rem;
+  padding-right: 1rem;
+  margin-top: 1rem;
+  margin-right: 1rem;
+  min-width: 20%;
+
 }
 
 .header-nav {
-  padding: 1rem 0;
-  margin: 0;
-  width: 100%;
-}
-
-.nav-container {
-  max-width: 1200px;
-  margin: 0 auto;
-  padding: 0 2rem;
+  top: 0;
+  width: 80%;
+  max-width: 80%;
+  height: 3rem;
+  padding: 0 4rem;
   display: flex;
-  justify-content: space-between;
+  margin-left: 1rem;
+  justify-content: left;
   align-items: center;
-}
-.nav-link {
-  color: $mocha-teal;
-  padding: 1rem 0;
-  margin: 0;
-  width: 100%;
+  flex-direction: row;
 }
 
-.site-logo {
+.header-nav-link {
+  padding: 1rem;
+  height: 2rem;
+  font-size: 2rem;
+  color: $mocha-blue;
+  text-decoration: none;
+  font-weight: 500;
+  transition: color 0.3s ease;
+}
+
+.header-nav-link:hover {
+  color: $mocha-teal;
+}
+
+.header-site-logo {
   font-size: 1.5rem;
   font-weight: 700;
   color: $mocha-blue;
@@ -39,53 +59,19 @@ $header-background-color:  rgba($mocha-blue, 0.25);
   transition: color 0.3s ease;
 }
 
-.site-logo:hover {
+.header-site-logo:hover {
   color: $mocha-teal;
 }
 
-.nav-links {
-  display: flex;
-  gap: 2rem;
-  list-style: none;
-  margin: 0;
-  padding: 0;
-}
-
-.nav-links a {
-  color: $mocha-blue;
-  text-decoration: none;
-  font-weight: 500;
-  transition: color 0.3s ease;
-  position: relative;
-}
-
-.nav-links a:hover {
-  color: $mocha-teal;
-}
-
-.nav-links a::after {
-  content: '';
-  position: absolute;
-  width: 0;
-  height: 2px;
-  bottom: -4px;
-  left: 0;
-  background-color: $mocha-teal;
-  transition: width 0.3s ease;
-}
-
-.nav-links a:hover::after {
-  width: 100%;
-}
 
 @media (max-width: 640px) {
-  .nav-container {
+  .header-nav{
     display: none;
-    flex-direction: column;
-    gap: 1rem;
+  }
+  .header-search{
+    width: 100%;
+    align-items: center;
+    justify-content: center;
   }
 
-  .nav-links {
-    gap: 1rem;
-  }
 }
