--- a/assets/scss/search.scss
+++ b/assets/scss/search.scss
@@ -6,7 +6,7 @@
   left: 0;
   width: 100%;
   height: 100%;
-  overflow: hidden;
+  overflow: visible;
   background-color: rgba(0, 0, 0, 0.8);
   z-index: 2000;
   align-items: top;
@@ -64,6 +64,7 @@
   align-items: center;
   flex-direction: column;
   width: 100%;
+  padding: 1rem;
 
   position: absolute;
   padding: 1rem 1.5rem;
@@ -72,10 +73,6 @@
 
   text-align: center;
   width: 100%;
-
-
-
-
 }
 
 .search-button-overlay:hover {
